<resources>
    <string name="app_name">Cycle Count System</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="syn">Synchronize</string>
    <string name="name">ชื่อ :</string>
    <string name="id_card">รหัสพนักงาน :</string>
    <string name="user">User :</string>
    <string name="pass">Password :</string>
    <string name="re_pass">Re-Password :</string>
    <string name="connected_ok">Internet OK</string>



</resources>
